--- a/scss/base.scss
+++ b/scss/base.scss
@@ -11,6 +11,14 @@
 @import "content/globals";
 @import "content/s_hero";
 @import "content/s_intro";
+@import "content/s_intro";
+@import "content/s_metropol";
+@import "content/s_movilidad";
+@import "content/cintillo_posible";
+@import "content/s_grande";
+@import "content/s_futuro";
+@import "content/s_verde";
+@import "content/s_medible";
 @import "content/s_comunidades";
 @import "content/s_buzon";
 @import "content/s_reclutamiento";
